# preflight-app

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: signer.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  preflight.rs  signer.rs
src/components/: AccountBar.tsx  ActivityLog.tsx  AddScenarioModal.tsx  CreatePolicyModal.tsx  HookSettings.tsx  LoginModal.tsx  PoliciesList.tsx  PolicyDetail.tsx  RuleCard.tsx  SignupModal.tsx
src/hooks/: usePolicyHidden.ts  usePolicyNames.ts  usePolicyRulesCache.ts
src/utils/: smt.ts
