[package]
name = "preflight-app"
version = "0.1.0"
description = "Local desktop interface for ICME Preflight"
authors = ["you"]
edition = "2021"

[lib]
name = "preflight_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
eventsource-stream = "0.2"
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.5"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
open = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
